[package]
name = "ntex-io"
version = "3.3.1"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Utilities for abstracting io streams"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-io/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "ntex_io"
path = "src/lib.rs"

[dependencies]
ntex-codec = {version = "1", path = "../ntex-codec" }
ntex-bytes = {version = "1", path = "../ntex-bytes" }
ntex-util = {version = "3", path = "../ntex-util" }
ntex-service = {version = "4", path = "../ntex-service" }

bitflags = { workspace = true }
log = { workspace = true }
pin-project-lite = { workspace = true }

[dev-dependencies]
ntex = "3.0.0-pre.8"
rand = { workspace = true }
