[package]
name = "ntex-net"
version = "3.4.1"
authors = ["ntex contributors <team@ntex.rs>"]
description = "ntexwork utils for ntex framework"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-connect/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "ntex_net"
path = "src/lib.rs"

[features]
default = []

# tokio runtime
tokio = ["ntex-rt/tokio", "ntex-tokio"]

# compio runtime
compio = ["ntex-rt/compio", "ntex-compio/compio"]

# neon runtime
neon = ["ntex-rt/neon", "ntex-neon", "slab", "socket2"]

io-uring = ["ntex-neon/io-uring", "socket2"]
io-uring-compat = []

[dependencies]
ntex-service = {version = "4", path = "../ntex-service" }
ntex-bytes = {version = "1", path = "../ntex-bytes" }
ntex-http = {version = "1", path = "../ntex-http" }
ntex-io = {version = "3.3.1", path = "../ntex-io" }
ntex-rt = {version = "3.3", path = "../ntex-rt" }
ntex-util = {version = "3", path = "../ntex-util" }

ntex-tokio = { version = "3.1.0", optional = true }
ntex-compio = { version = "3.4.0", optional = true }
ntex-neon = { version = "0.2.2", optional = true }

bitflags = { workspace = true }
cfg-if = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
slab = { workspace = true, optional = true }
socket2 = { workspace = true, optional = true, features = ["all"] }
thiserror = { workspace = true }

[dev-dependencies]
ntex = "3.0.0-pre.8"
oneshot = "0.1"
