[package]
name = "ntex-server"
version = "3.4.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Server for ntex framework"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-server/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "ntex_server"
path = "src/lib.rs"

[dependencies]
ntex-io = {version = "3", path = "../ntex-io" }
ntex-net = {version = "3.2", path = "../ntex-net" }
ntex-service = {version = "4", path = "../ntex-service" }
ntex-rt = {version = "3", path = "../ntex-rt" }
ntex-util = {version = "3", path = "../ntex-util" }

async-channel = { workspace = true }
atomic-waker = { workspace = true }
core_affinity = { workspace = true }
oneshot = { workspace = true }
polling = { workspace = true }
log = { workspace = true }
socket2 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
ntex = "3.0.0-pre.6"

[target.'cfg(target_family = "unix")'.dependencies]
signal-hook = { version = "0.3", features=["iterator"] }

[target.'cfg(target_family = "windows")'.dependencies]
ctrlc = "3.4"
