[package]
name = "ntex-tokio"
version = "3.1.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "tokio intergration for ntex framework"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-tokio/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "ntex_tokio"
path = "src/lib.rs"

[dependencies]
ntex-bytes = {version = "1", path = "../ntex-bytes" }
ntex-io = {version = "3", path = "../ntex-io" }
ntex-util = {version = "3", path = "../ntex-util" }
ntex-service = {version = "4", path = "../ntex-service" }

log = { workspace = true }
tokio = { version = "1", default-features = false, features = ["rt", "net", "sync", "signal"] }
