[package]
name = "ntex-util"
version = "3.4.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Utilities for ntex framework"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-util/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "ntex_util"
path = "src/lib.rs"

[dependencies]
ntex-bytes = {version = "1", path = "../ntex-bytes" }
ntex-service = {version = "4", path = "../ntex-service" }
ntex-rt = {version = "3", path = "../ntex-rt" }

foldhash = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
slab = { workspace = true }
futures-timer = { workspace = true }
futures-core = { workspace = true }
pin-project-lite = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ntex = "3.0.0-pre.6"
futures-util = { workspace = true }
async-channel = { workspace = true }
