[package]
name = "ntex"
version = "3.0.0-pre.9"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Framework for composable network services"
readme = "README.md"
keywords = ["ntex", "networking", "framework", "async", "futures"]
repository = "https://github.com/ntex-rs/ntex"
documentation = "https://docs.rs/ntex/"
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
toolchain = "nightly"
features = ["tokio", "openssl", "rustls", "compress", "cookie", "ws", "ntex-tls/rustls-ring"]
rustc-args = ["--cfg", "docsrs_dep"]
rustdoc-args = ["--cfg", "docsrs_dep"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }

[lib]
name = "ntex"
path = "src/lib.rs"

[features]
default = ["ws"]

# openssl
openssl = ["tls-openssl", "ntex-tls/openssl"]

# rustls support
rustls = ["tls-rustls", "webpki-roots", "ntex-tls/rustls"]

# enable compressison support
compress = ["flate2"]

# enable cookie support
cookie = ["coo-kie", "coo-kie/percent-encode"]

# url support
url = ["url-pkg"]

# tokio runtime
tokio = ["ntex-net/tokio"]

# compio runtime
compio = ["ntex-net/compio"]

# neon runtime
neon = ["ntex-net/neon"]

# neon runtime
neon-uring = ["ntex-net/neon", "ntex-net/io-uring"]

# websocket support
ws = ["dep:sha1"]

# disable [ntex::test] logging configuration
no-test-logging = []

[dependencies]
ntex-bytes = {version = "1", path = "../ntex-bytes" }
ntex-codec = {version = "1", path = "../ntex-codec" }
ntex-http = { version = "1", path = "../ntex-http"}
ntex-router = {versioon = "1", path = "../ntex-router"}
ntex-service = {version = "4", path = "../ntex-service" }
ntex-macros = {version = "0.2", path = "../ntex-macros" }
ntex-util = {version = "3.4", path = "../ntex-util" }
ntex-server = {version = "3.4", path = "../ntex-server" }
# ntex-h2 = {version = "3.1", path = "../ntex-h2" }
ntex-h2 = "3.1"
ntex-rt = {version = "3.4", path = "../ntex-rt" }
ntex-io = {version = "3.3", path = "../ntex-io" }
ntex-net = {version = "3.4", path = "../ntex-net" }
ntex-tls = {version = "3.1", path = "../ntex-tls" }

base64 = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
pin-project-lite = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
sha1 = { workspace = true, optional = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
nanorand = { workspace = true }
variadics_please = { workspace = true }
uuid = { workspace = true }

# http/web framework
httparse = { workspace = true }
httpdate = { workspace = true }
encoding_rs = { workspace = true }
mime = { workspace = true }
percent-encoding = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
url-pkg = { workspace = true, optional = true }
coo-kie = { workspace = true, optional = true }

# openssl
tls-openssl = { version = "0.10", package = "openssl", optional = true }

# rustls
tls-rustls = { version = "0.23", package = "rustls", optional = true, default-features = false }
webpki-roots = { workspace = true, optional = true }

# compression
flate2 = { version = "1.0", optional = true }

[dev-dependencies]
rand = { workspace = true }
time = { workspace = true }
oneshot = { workspace = true }
futures-util = { workspace = true }
tls-openssl = { version = "0.10", package = "openssl" }
tls-rustls = { version = "0.23", package = "rustls", features = ["ring", "std"], default-features = false }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }
